feat: Update env example

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
+; Timestamp when the first collection with beacon proxy was deployed to the blockchain.
+; Change this value if you want to verify proxies created at after the provided value.
+CREATED_AT_GE=1652369600
+
+; Api key required to consume the polygonscan api 
+; https://docs.polygonscan.com/getting-started/viewing-api-usage-statistics
 POLYGONSCAN_API_KEY=
