--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-; Timestamp when the first collection with beacon proxy was deployed to the blockchain.
-; Change this value if you want to verify proxies created at after the provided value.
-CREATED_AT_GTE=1652369600
+; Timestamp of the latest verified collection (+1).
+; Using this value will prevent fresh runs to attempt to verify already verified collections.
+CREATED_AT_GTE=1658747199
 
 ; Api key required to consume the polygonscan api 
 ; https://docs.polygonscan.com/getting-started/viewing-api-usage-statistics
